backend/src/main/java/com/example/backend/cmm/error/exception/BadTokenException.java
package com.example.backend.cmm.error.exception;

public class BadTokenException extends RuntimeException {

    private static final long serialVersionUID = -8942099567597994041L;

    public BadTokenException(String message) {
        super(message);
    }
}
